<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/transparent"

    android:orientation="vertical"
    android:id="@+id/root_layout"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"

    >


    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/white"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/playstore"
        android:id="@+id/tablayout_id"
        android:layout_gravity="center"
        android:elevation="1dp"

        android:clipToPadding="false"
        app:tabSelectedTextColor="@color/playstore"
        app:layout_constraintTop_toTopOf="parent"
        >

    </com.google.android.material.tabs.TabLayout>



    <androidx.viewpager.widget.ViewPager
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/viewpager_id"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tablayout_id"
        app:layout_constraintVertical_bias="0.0"
        >

    </androidx.viewpager.widget.ViewPager>

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--        android:background="@color/white"-->

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/home" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_badgeBackgroundColor="@color/green_active"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_search"
            app:bt_shape="@drawable/transition_background_drawable_search"
            app:bt_title="@string/search" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"

            app:bt_colorActive="@color/blue_grey_active"
            app:bt_colorInactive="@color/blue_grey_inactive"
            app:bt_icon="@drawable/ic_like"
            app:bt_shape="@drawable/transition_background_drawable_like"
            app:bt_title="@string/likes" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_playlist"
            app:bt_shape="@drawable/transition_background_drawable_list"
            app:bt_title="@string/notification" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/purple_active"
            app:bt_colorInactive="@color/purple_inactive"
            app:bt_icon="@drawable/ic_person"
            app:bt_shape="@drawable/transition_background_drawable_person"
            app:bt_title="@string/profile" />
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>




</androidx.constraintlayout.widget.ConstraintLayout>